<resources>
    <string name="app_name">My Application</string>
    <string name="title">Vehicle Speed Detection</string>
    <string name="browse">Browse</string>
    <string name="plate_detection_txt">plateDetection</string>
    <string name="save_output_txt">saveOutput</string>
    <string name="save">save</string>
    <string name="change_circles" />
    <string name="ase">ASE</string>
    <string name="side_view">Side View</string>
    <string name="top_view">Top View</string>
    <string name="server">Server</string>
    <string name="local">Local</string>
    <string name="server_url">http://192.168.43.226:5000/</string>
    <string name="server_speed">server speed</string>
    <string name="cp">CP</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="ph">PH</string>
    <string name="focal_length">focal length:</string>
    <string name="x0">, X0:</string>
    <string name="y0">, Y0:</string>
    <string name="h">, H:</string>
    <string name="x2_y2">(x2, y2):</string>
    <string name="x1_y1">(x1, y1):</string>
    <string name="x0_y0">(x0, y0):</string>
    <string name="x3_y3">(x3, y3):</string>
    <string name="coeff">coeff=</string>
    <string name="roadLine">RL</string>
</resources>