<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="30sp" />


    <LinearLayout
        android:id="@+id/parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="alpha:" />

        <EditText
            android:id="@+id/alpha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="30" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=", beta:" />

        <EditText
            android:id="@+id/beta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="45" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=", focal length:" />

        <EditText
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="50.0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/parameters2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parameters"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="XR:" />

        <EditText
            android:id="@+id/XR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="10.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=", YR:" />

        <EditText
            android:id="@+id/YR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="20.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=", HR:" />

        <EditText
            android:id="@+id/HR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="30.0" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/IP_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Server IP:Port:" />

        <EditText
            android:id="@+id/ip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="192"
            android:inputType="number"
            android:text="192" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="." />

        <EditText
            android:id="@+id/ip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="168"
            android:inputType="number"
            android:text="168" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="." />

        <EditText
            android:id="@+id/ip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="43"
            android:inputType="number"
            android:text="43" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="." />

        <EditText
            android:id="@+id/ip4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="226"
            android:inputType="number"
            android:text="226" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="5000"
            android:hint="Port"
            android:inputType="number"
            android:text="5000" />
        />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/url_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parameters2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Server URL" />

        <EditText
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="192"
            android:inputType="textWebEmailAddress"
            android:text="@string/server_url" />
    </LinearLayout>


    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:onClick="browseVideo" />


    <com.google.mlkit.vision.GraphicOverlay
        android:id="@+id/overlayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="saveCsv"
        android:text="@string/save"
        android:visibility="invisible" />


    <Button
        android:id="@+id/browseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="browseVideo"
        android:text="@string/browse" />

    <Switch
        android:id="@+id/saveSw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="10dp"
        android:text="@string/save_output_txt"
        android:visibility="invisible"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/circle1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/overlayView"
        android:layout_alignTop="@+id/overlayView"
        android:layout_marginStart="263dp"
        android:layout_marginTop="308dp"
        android:background="@drawable/circle_shape"
        android:visibility="invisible" />

    <View
        android:id="@+id/circle2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/overlayView"
        android:layout_alignTop="@+id/overlayView"
        android:layout_marginStart="312dp"
        android:layout_marginTop="406dp"
        android:background="@drawable/circle_shape"
        android:visibility="invisible" />

    <View
        android:id="@+id/circle3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/overlayView"
        android:layout_alignTop="@+id/overlayView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/circle_shape"
        android:visibility="invisible" />

    <View
        android:id="@+id/circle4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/overlayView"
        android:layout_alignTop="@+id/overlayView"
        android:layout_marginStart="102dp"
        android:layout_marginTop="453dp"
        android:background="@drawable/circle_shape"
        android:visibility="invisible" />

    <Button
        android:id="@+id/changBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="changeCircles"
        android:text="@string/change_circles"
        android:visibility="invisible" />

    <RadioGroup
        android:id="@+id/radioGroupServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioServer_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_speed" />

        <RadioButton
            android:id="@+id/radioServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server" />

        <RadioButton
            android:id="@+id/radioLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/local" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupServer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioASE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ase" />

        <RadioButton
            android:id="@+id/radioSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_view" />

        <RadioButton
            android:id="@+id/radioTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_view" />

        <RadioButton
            android:id="@+id/radioIPSA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cp" />
    </RadioGroup>

</RelativeLayout>